<resources>
    <string name="app_name">Travel Journal App</string>


    <string name="nav_view_menu_Home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">
        Open Navigation Drawer
    </string>

    <string name="navigation_drawer_close">
        Close Navigation Drawer
    </string>


    <string name="delete_all_text">Delete All</string>

    <string name="trip_name">Trip Name</string>
    <string name="trip_destination">Trip Destination</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="save_trip">Save</string>


    <string name="welcome_app_name">Travel Journal</string>

    <string name="register_text">Register here</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register">Register</string>

</resources>
