<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment"
    android:padding="24dp">

    <TextView
        android:id="@+id/register_page_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        style="@style/TextAppearance.AppCompat.Large"
        android:fontFamily="@font/advent_pro_bold"
        android:textSize="50sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/register_page_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/name_hint"
        app:layout_constraintTop_toBottomOf="@id/register_page_register_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/register_page_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/email_hint"
        app:layout_constraintTop_toBottomOf="@id/register_page_name_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/register_page_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/password_hint"
        app:layout_constraintTop_toBottomOf="@id/register_page_email_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/register_person_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"

        app:layout_constraintTop_toBottomOf="@id/register_page_password_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>